# datathon-credit-copilot

./: .gitignore  README.md  STATUS.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.dvc/: config
data/: raw.dvc
data/golden_set/: golden_set.json
data/knowledge_base/: cdc_art43.md  cmn_4557.md  cmn_4966_metodologias.md  lei_14181_superendividamento.md  lgpd_art20.md
evaluation/fairness/: fairness_mitigation_report.json  fairness_report.json
notebooks/: 01_eda.ipynb
scripts/: make_eda_notebook.py
src/agent/: data_layer.py  model_layer.py  rag.py  react_agent.py  tools.py
src/evaluation/: golden_set_eval.py
src/features/: aggregations.py  preprocess.py
src/models/: train_baseline.py
src/monitoring/: fairness.py  mitigation.py
src/security/: pii.py
src/serving/: api.py
