[project]
name = "credit-copilot"
version = "0.1.0"
description = "Credit Underwriting Copilot — LLM agent para análise de crédito com ML, RAG e governança (FIAP Datathon Fase 05)"
authors = [{ name = "Rafael Zampieri", email = "rafaelzampieri5@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    # Core data stack
    "pandas>=2.2,<2.3",
    "numpy>=1.26,<2.0",
    "scipy>=1.13",
    "pyarrow>=16.0",
    # ML core (sempre instalado — baseline e features)
    "scikit-learn>=1.5,<1.6",
    "lightgbm>=4.5,<5.0",
    # Config & validation
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    # Utils
    "rich>=13.7",
    "tqdm>=4.66",
    "joblib>=1.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "pandera>=0.20",
    "ipykernel>=6.29",
    "jupyter>=1.1",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "plotly>=5.24",
]

ml = [
    "torch>=2.4,<2.5",           # MLP PyTorch
    "mlflow>=2.16",              # tracking + registry
    "dvc[s3]>=3.55",             # data versioning
    "evidently>=0.4.33",         # drift monitoring
    "fairlearn>=0.11",           # fairness audits
    "shap>=0.46",                # explainability
    "optuna>=4.0",               # hyperparam tuning
]

llm = [
    "langchain>=0.3,<0.4",
    "langchain-community>=0.3",
    "langchain-groq>=0.2",        # Groq como LLM provider
    "langchain-openai>=0.2",      # embeddings
    "chromadb>=0.5",
    "tiktoken>=0.8",
    "langfuse>=2.51",             # LLM observability
    "ragas>=0.2",                 # RAG eval
    "pypdf>=5.0",                 # ingestão regulatórios
    "unstructured>=0.15",
]

serving = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "prometheus-client>=0.21",
    "httpx>=0.27",
    "slowapi>=0.1.9",             # rate limiting
]

security = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
    # modelo pt_BR do spaCy vai via script separado
]

all = [
    "credit-copilot[dev,ml,llm,serving,security]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks", "data", "mlruns"]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "B",         # flake8-bugbear
    "C4",        # comprehensions
    "UP",        # pyupgrade
    "SIM",       # simplify
    "RUF",       # ruff-specific
]
ignore = ["E501"]  # line-too-long é tratado pelo formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
exclude = ["notebooks/", "data/", "mlruns/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: testes lentos (skip por default)",
    "integration: testa componentes integrados",
    "llm: requer LLM (custa tokens)",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "notebooks/*"]


ml = [
    "torch>=2.4,<2.5",
    "mlflow>=2.16",
    "dvc[s3]>=3.55",
    "evidently>=0.4.33",
    "fairlearn>=0.11",
    "shap>=0.46",
    "optuna>=4.0",
    "category-encoders>=2.6",   # <--
]